[package]
name = "rncmdump"
version = "0.1.0"
authors = ["catsout <outline941@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
aes = "0.7"
block-modes = "0.8"
base64 = "0.13"
metaflac = "0.2"
id3 = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"


[profile.release]
